2003-12-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rc/wish.exe.manifest: It seems that Windows XP insists on a
	strict format for the version value. 8.5.a0 or 8.5.0 results in an
	unloadable executable -- must be 4 numbers.

	* win/tkWinSend.c: Removed some misleading comments (bug #846134)
	and disabled the send package until bug #858822 is resolved.

2003-12-16  Anton Kovalenko <a_kovalenko@users.sourceforge.net>

	* win/tkWinWm.c (InstallColormaps): Check for TK_ALREADY_DEAD
	to avoid handling of dead windows.

2003-12-15  David Gravereaux <davygrvy@pobox.com>

	Some silent invalid handle issues discovered with NuMega's
	BoundsChecker [Patch 699022]

	* win/tkWinMenu.c (ReconfigureWindowsMenu) : Only redraw the
	menubar when a menubar exists.

	* win/tkWinWm.c (UpdateGeometryInfo) : wmPtr->wrapper might
	be NULL.  No exception is thrown, but it isn't correct to ignore.

2003-12-15  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXKeyboard.c: General cleanup.  Add support for
	[event generate].  [Bug #860454]

2003-12-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.h: 
	* generic/tkText.h:
	* generic/tkTextBTree.c:
	* generic/tkTextDisp.c:
	* generic/tkTextIndex.c: improved documentation in comments to
	explain how pixel heights are kept track of.  Also ensured 
	correct clean-up of elide-state calculation, even with very
	large numbers of tags.  Also provided slightly better updating
	of cache for totally elided display lines.

2003-12-12  David Gravereaux <davygrvy@pobox.com>

	* win/tkWinEmbed.c (TkWinEmbeddedEventProc) : for loop dereferences
	containerPtr but can't get to the if (containerPtr == NULL) test due
	to the unhandled read memory exception for when it really is NULL.

	* win/tkWinX.c (TkWinXInit): Don't restrict InitCommonControlsEx.
	It's valid on all platforms given IE 3.0+ is installed.  As tkWinX.c
	does set #define _WIN32_IE 0x0300, I guess we can accept IE3 as the